--- a/public/login.html
+++ b/public/login.html
@@ -14,7 +14,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li><a href="/">Home</a></li>
-                        <li><a href="/signup">Sign Up</a></li>
+                        <li><a href="/signup.html">Sign Up</a></li>
                         <li><a href="/dashboard">Dashboard</a></li>
                     </ul>
 
@@ -31,11 +31,11 @@
                 <form action="/login" method="post">
                     <div>
                         <label>Username:</label>
-                        <input type="text" name="username"/>
+                        <input type="text" name="username" required/>
                     </div>
                     <div>
                         <label>Password:</label>
-                        <input type="password" name="password"/>
+                        <input type="password" name="password" required/>
                     </div>
                     <div>
                         <input class="btn btn-primary" type="submit" value="Log In"/>
