--- a/public/signup.html
+++ b/public/signup.html
@@ -14,12 +14,12 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li><a href="/">Home</a></li>
-                        <li><a href="/signup">Sign Up</a></li>
+                        <li><a href="/signup.html">Sign Up</a></li>
                         <li><a href="/dashboard">Dashboard</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/login">Log In</a></li>
+                        <li><a href="/login.html">Log In</a></li>
                         <li><a href="/logout">Log Out</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
@@ -31,11 +31,11 @@
                 <form action="/signup" method="post">
                     <div>
                         <label>Username:</label>
-                        <input type="text" name="username"/>
+                        <input type="text" name="username" required/>
                     </div>   
                     <div>
                         <label>Password:</label>
-                        <input type="password" name="password"/>
+                        <input type="password" name="password" required/>
                     </div>
                     <div>
                         <input class="btn btn-primary" type="submit" value="Register"/>
