--- a/public/login.html
+++ b/public/login.html
@@ -15,12 +15,13 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/">Home</a></li>
                         <li><a href="/signup.html">Sign Up</a></li>
-                        <li><a href="/dashboard">Dashboard</a></li>
+                        <li><a href="/login.html">Log In</a></li>
+                        <!-- <li><a href="/dashboard">Dashboard</a></li> -->
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/login">Log In</a></li>
-                        <li><a href="/logout">Log Out</a></li>
+                        <!-- <li><a href="/login">Log In</a></li>
+                        <li><a href="/logout">Log Out</a></li> -->
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
