--- a/public/dice.html
+++ b/public/dice.html
@@ -12,7 +12,7 @@
     <style>
     </style>
 
-    <script src="../dice.js" defer></script>
+    <script src="js/dice.js" defer></script>
   </head>
 
 <div class="container">
